added UI to tpr, worksheet; edited navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,10 @@
 	font-size: 18pt;
 }
 
+.nav-bar-text {
+	font-size: 13pt !important;
+}
+
 .main-white {
 	background-color: #f8f8f8 !important;
 }
@@ -42,6 +46,7 @@
 .chicken_label_name{
 	color:transparent!important;
 }
+
 @media only screen and (max-width: 1338px) {
 
 .btn-main-green {
