--- a/app/views/member_ts/index.html.erb
+++ b/app/views/member_ts/index.html.erb
@@ -1,51 +1,113 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Member Ts</h1>
-<%= link_to 'New Member t', new_member_t_registration_path %>
-<table>
-  <thead>
-    <tr>
-      <th>Id number</th>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Middle initial</th>
-      <th>Email address</th>
-      <th>Contact no</th>
-      <th>Attendance</th>
-      <th>Type</th>
-      <th>Committee</th>
-      <th>Birthday</th>
-      <th>Year course</th>
-      <th>Scholarship</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
+<!DOCTYPE html>
+<html>
+<head>
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
+
+
+<div class="col s12">
+          <center>
+          <br>
+          <br>
+          <a class="main-green-text crete-round"><font size="6">Members</font></a>            
+          <br>
+          <%=image_tag("line3.png" , height:'55')%>
+          <br>
+          </center>
+          <br>
+        </div>
+
+
+<div class="container">
+    <div class="row">
+    <table class="bordered">
+      <thead class="table-header crete-round">
+        <tr>
+
+          <div class="col s2">
+          <th data-field="name">Name</th>
+          </div>
+          <div class="col s2">
+          <th data-field="subject">Membership</th>
+          </div>
+          <div class="col s2">
+          <th data-field="subject">Mobile</th>
+          </div>
+          <div class="col s2">
+          <th data-field="subject">E-mail Address</th>
+          </div>
+          <div class="col s2">
+          <th data-field="subject">Last Attended</th>
+          </div>
+          <div class="col s2">
+          <th data-field="actions"><center>Actions</center></th>
+          </div>
+        </tr>
+      </thead>
+      <tbody>
     <% @member_ts.each do |member_t| %>
       <tr>
-        <td><%= member_t.id_number %></td>
-        <td><%= member_t.first_name %></td>
-        <td><%= member_t.last_name %></td>
-        <td><%= member_t.middle_initial %></td>
-        <td><%= member_t.email %></td>
-        <td><%= member_t.contact_no %></td>
-        <td><%= member_t.attendance %></td>
+        <div class="col s2">
+        <td><%= member_t.first_name %> <%= member_t.middle_initial %>. <%= member_t.last_name %></td>
+        </div>
+        <div class="col s2">
         <td><%= member_t.membership %></td>
-        <td><%= member_t.committee %></td>
-        <td><%= member_t.birthday %></td>
-        <td><%= member_t.year_course %></td>
-        <td><%= member_t.scholarship %></td>
-        <%if current_member_t == member_t or current_member_t.membership == "Administration" %>
-        <td><%= link_to 'Edit', edit_member_t_registration_path(member_t.id) %></td>
-        <td><%= link_to "Delete", destroy_member_t_path(member_t), confirm: "Are you sure?", :method => :delete %><td>
-        <%end%>
- 
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        </div>
+        <div class="col s2">
+        <td><%= member_t.contact_no %></td>
+        </div>
+        <div class="col s2">
+        <td><%= member_t.email %></td>
+        </div>
+        <div class="col s2">
+        <td>**</td>
+        </div>
+        <div class="col s2">
+              <td><center><%= link_to 'Show', member_t, :class => 'waves-effect waves-light btn btn-main-green' %>
+              <%= link_to 'Delete', member_t, method: :delete, :class => 'waves-effect waves-light btn btn-main-green', data: { confirm: 'Are you sure?' } %>
+              
+            </center></td>
+            </div>
+        </tr>
 
-<br>
+
+
+        <% end %>
+      </tbody>
+    </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
