--- a/app/views/member_ts/show.html.erb
+++ b/app/views/member_ts/show.html.erb
@@ -1,70 +1,101 @@
 <p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html>
+<head>
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-<p>
-  <strong>Id number:</strong>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
+
+<div class="col s12">
+          <center>
+          <br>
+          <br>
+          <a class="main-green-text crete-round"><font size="6"><%= @member_t.first_name %> <%= @member_t.middle_initial %>. <%= @member_t.last_name %>  </font></a>            
+          <br>
+          <%=image_tag("line3.png" , height:'55')%>
+          <br>
+          </center>
+          <br>
+        </div>
+
+<center>
+        <div class="container card open-sans main-white">
+          <div class="card-content">
+            <span class="card-title activator main-green-text">ACCOUNT DETAILS</span>
+            <form class="col s12">
+              <div class="row">
+                <div class="input-field col s12">
+                 <div class="row">
+      <br>
+    <div class="input-field col s12">  
+      <b>ID Number:</b>
   <%= @member_t.id_number %>
-</p>
-
-<p>
-  <strong>First name:</strong>
-  <%= @member_t.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @member_t.last_name %>
-</p>
-
-<p>
-  <strong>Middle initial:</strong>
-  <%= @member_t.middle_initial %>
-</p>
-
-<p>
-
-  <p>
-  <strong>Password:</strong>
-  <%= @member_t.password %>
-</p>
-
-  <strong>Email:</strong>
-  <%= @member_t.email %>
-</p>
-
-<p>
-  <strong>Contact no:</strong>
-  <%= @member_t.contact_no %>
-</p>
-
-<p>
-  <strong>Attendance:</strong>
-  <%= @member_t.attendance %>
-</p>
-
-<p>
-  <strong>Type:</strong>
-  <%= @member_t.membership %>
-</p>
-
-<p>
-  <strong>Committee:</strong>
-  <%= @member_t.committee %>
-</p>
-
-<p>
-  <strong>Birthday:</strong>
-  <%= @member_t.birthday %>
-</p>
-
-<p>
-  <strong>Year course:</strong>
+    </div>
+    <div class="input-field col s12">  
+        <b>Year and Course:</b>
   <%= @member_t.year_course %>
-</p>
+    </div>
+ 
 
-<p>
-  <strong>Scholarship:</strong>
+
+
+    <div class="input-field col s12">
+     <b>E-mail Address:</b>
+  <%= @member_t.email %>
+    </div>
+    <div class="input-field col s12">
+        <b>Mobile Number:</b>
+  <%= @member_t.contact_no %>
+    </div>
+
+    
+
+
+   
+    <div class="input-field col s12">
+        <b>Scholarship:</b>
   <%= @member_t.scholarship %>
-</p>
+    </div>
+        <div class="input-field col s12">
+         <b>Attendance:</b>
+  <%= @member_t.attendance %>  
+    </div>
 
-<%= link_to 'Edit', edit_member_t_path(@member_t) %> |
+
+
+    
+    <div class="input-field col s12">
+        <b>Membership Type:</b>
+  <%= @member_t.membership %>
+    </div>
+    <div class="input-field col s12">
+    <b>Committee:</b>
+  <%= @member_t.committee %>
+    </div>
+
+   
+                </div>
+              </div>
+            </div>      
+          </div>
+        </center>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <%= link_to 'Back', member_ts_path %>
