--- a/app/views/tpr_ts/_form.html.erb
+++ b/app/views/tpr_ts/_form.html.erb
@@ -1,17 +1,60 @@
+
+
 <%= simple_form_for(@tpr_t) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :week_no %>
-    <%= f.association :tutee_t %>
-    <%= f.input :strengths %>
-    <%= f.input :weaknesses %>
-    <%= f.input :actions %>
-    <%= f.association :module_t %>
-    <%= f.association :member_t %>
+<%= f.error_notification %>
+<div class="form-inputs">
+  <div class="col s12">
+    <center>
+      <br>
+      <br>
+      <a class="main-green-text crete-round"><font size="6">Tutee Progress Report</font></a>          
+      <br>
+      <%=image_tag("line3.png" , height:'55')%>
+      <br>
+    </center>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+  <div class="row">
+    <div class="input-field col s6 offset-s3"> 
+      <div class="row">
+        <div class="input-field col s12">
+          <%= f.association :tutee_t, prompt: 'Tutee' %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s9">
+          <%= f.association :module_t, prompt: 'Module' %>
+        </div>
+        <div class="input-field col s3">
+        <%= f.input :week_no %>
+      </div> 
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <%= f.input :strengths %>
+        </div> 
+      <div class="row">
+      </div> 
+        <div class="input-field col s12">
+          <%= f.input :weaknesses %>
+        </div>            
+      </div>         
+    <div class="row">
+      <div class="input-field col s12">
+        <%= f.input :actions %>
+      </div>            
+    </div>
+  </div> 
+      </div> 
+  <div class="row">
+    <div class="col s12 offset-s5">
+      <div class="form-actions">
+        <%= f.button :submit, "Create TPR", input_html: {class: 'btn btn-main-green' } %>
+      </div> 
+    </div>                 
+  </div>  
+</div>
+
+
 <% end %>
+</div>
