--- a/app/views/tpr_ts/index.html.erb
+++ b/app/views/tpr_ts/index.html.erb
@@ -1,39 +1,82 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Tpr Ts</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-<table>
-  <thead>
-    <tr>
-      <th>Week no</th>
-      <th>Tutee t</th>
-      <th>Strengths</th>
-      <th>Weaknesses</th>
-      <th>Actions</th>
-      <th>Module t</th>
-      <th>Member t</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
 
-  <tbody>
+<div class="col s12">
+          <center>
+          <br>
+          <br>
+          <a class="main-green-text crete-round"><font size="6">Tutee Progress Reports</font></a>            
+          <br>
+          <%=image_tag("line3.png" , height:'55')%>
+          <br>
+          </center>
+          <center>
+            <%= link_to 'Create Progress Report', new_tpr_t_path, :class => 'waves-effect waves-light btn btn-main-green' %>
+          <br>
+          <br>
+      </center>
+        </div>
+
+<!--table-->
+  <div class="container">
+    <div class="row">
+    <table class="bordered">
+      <thead class="table-header crete-round">
+        <tr>
+          <div class="col s1">
+          <th data-field="name">Week</th>
+          </div>
+          <div class="col s2">
+          <th data-field="subject">Tutee Name</th>
+          </div>
+          <div class="col s3">
+          <th data-field="subject">Module</th>
+          </div>
+          <div class="col s3">
+          <th data-field="actions"><center>Actions</center></th>
+          </div>
+        </tr>
+      </thead>
+      <tbody>
     <% @tpr_ts.each do |tpr_t| %>
       <tr>
-        <td><%= tpr_t.week_no %></td>
-        <td><%= tpr_t.tutee_t_id %></td>
-        <td><%= tpr_t.strengths %></td>
-        <td><%= tpr_t.weaknesses %></td>
-        <td><%= tpr_t.actions %></td>
-        <td><%= tpr_t.module_t_id %></td>
-        <td><%= tpr_t.member_t_id %></td>
-        <td><%= link_to 'Show', tpr_t %></td>
-        <td><%= link_to 'Edit', edit_tpr_t_path(tpr_t) %></td>
-        <td><%= link_to 'Destroy', tpr_t, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <div class="col s1">
+<td><%= tpr_t.week_no %></td>
+        </div>
+        <div class="col s2">
+        <td><% t=TuteeT.find(tpr_t.tutee_t_id) %><%= t.first_name %> <%= t.last_name %> </td>
+        </div>
 
-<br>
+        <div class="col s3">
+        <td><% t= ModuleT.find(tpr_t.module_t_id) %><%= t.topic %></td>
+        </div>
 
-<%= link_to 'New Tpr t', new_tpr_t_path %>
+        <div class="col s3">
+              <td><center><%= link_to 'Show', tpr_t, :class => 'waves-effect waves-light btn btn-main-green' %>
+              <%= link_to 'Edit', edit_tpr_t_path(tpr_t), :class => 'waves-effect waves-light btn btn-main-green' %>
+              <%= link_to 'Delete', tpr_t, method: :delete, :class => 'waves-effect waves-light btn btn-main-green', data: { confirm: 'Are you sure?' } %>
+              
+            </center></td>
+            </div>
+        </tr>
+
+
+
+        <% end %>
+      </tbody>
+    </table>
+
+
+</body>
+</html>
