--- a/app/views/tutee_ts/index.html.erb
+++ b/app/views/tutee_ts/index.html.erb
@@ -1,60 +1,103 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Tutee Ts</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>School</th>
-      <th>Math grade</th>
-      <th>Eng grade</th>
-      <th>Father name</th>
-      <th>Father occupation</th>
-      <th>Mother name</th>
-      <th>Mother occupation</th>
-      <th>Ambition</th>
-      <th>Fav subject</th>
-      <th>Fav food</th>
-      <th>Fav color</th>
-      <th>Fav movie</th>
-      <th>Attendance</th>
-      <th>Module t</th>
-      <th>Group no</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
 
-  <tbody>
+     <div class="col s12">
+          <center>
+          <br>
+          <br>
+          <a class="main-green-text crete-round"><font size="6">Tutees</font></a>            
+          <br>
+          <%=image_tag("line3.png" , height:'55')%>
+          <br>
+          </center>
+          <br>
+          <center><%= link_to 'Create Tutee Profile', new_tutee_t_path, :class => 'waves-effect waves-light btn btn-main-green' %>
+            <%= link_to 'Create Progress Report', new_tpr_t_path, :class => 'waves-effect waves-light btn btn-main-green' %>
+          <br>
+          <br>
+      </center>
+        </div>
+
+
+
+
+<!--table-->
+  <div class="container">
+    <div class="row">
+    <table class="bordered">
+      <thead class="table-header crete-round">
+        <tr>
+          <div class="col s2">
+          <th data-field="name">Tutee Name</th>
+          </div>
+          <div class="col s2">
+          <th data-field="subject">School</th>
+          </div>
+          <div class="col s2">
+          <th data-field="subject">Current Module</th>
+          </div>
+          <div class="col s2">
+          <th data-field="subject">Last Attended</th>
+          </div>
+          <div class="col s4">
+          <th data-field="actions"><center>Actions</center></th>
+          </div>
+        </tr>
+      </thead>
+      <tbody>
     <% @tutee_ts.each do |tutee_t| %>
       <tr>
-        <td><%= tutee_t.first_name %></td>
-        <td><%= tutee_t.last_name %></td>
+        <div class="col s2">
+        <td><%= tutee_t.first_name %> <%= tutee_t.last_name %></td>
+        </div>
+        <div class="col s2">
         <td><%= tutee_t.school %></td>
-        <td><%= tutee_t.math_grade %></td>
-        <td><%= tutee_t.eng_grade %></td>
-        <td><%= tutee_t.father_name %></td>
-        <td><%= tutee_t.father_occupation %></td>
-        <td><%= tutee_t.mother_name %></td>
-        <td><%= tutee_t.mother_occupation %></td>
-        <td><%= tutee_t.ambition %></td>
-        <td><%= tutee_t.fav_subject %></td>
-        <td><%= tutee_t.fav_food %></td>
-        <td><%= tutee_t.fav_color %></td>
-        <td><%= tutee_t.fav_movie %></td>
-        <td><%= tutee_t.attendance %></td>
-        <td><%= tutee_t.module_t_id %></td>
-        <td><%= tutee_t.group_no %></td>
-        
-        <td><%= link_to 'Show', tutee_t %></td>
-        <td><%= link_to 'Edit', edit_tutee_t_path(tutee_t) %></td>
-        <td><%= link_to 'Destroy', tutee_t, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        </div>
 
-<br>
+        <div class="col s2">
+        <td><% t=ModuleT.find(tutee_t.module_t_id) %> <%= t.file_file_name %></td>
+        </div>
+        <div class="col s2">
+        <td><%= tutee_t.tuteedatetime %></td>
+        </div>
+        <div class="col s4">
+              <td><center><%= link_to 'Show', tutee_t, :class => 'waves-effect waves-light btn btn-main-green' %>
+              <%= link_to 'Edit', edit_tutee_t_path(tutee_t), :class => 'waves-effect waves-light btn btn-main-green' %>
+              <%= link_to 'Delete', tutee_t, method: :delete, :class => 'waves-effect waves-light btn btn-main-green', data: { confirm: 'Are you sure?' } %>
+              
+            </center></td>
+            </div>
+        </tr>
 
-<%= link_to 'New Tutee t', new_tutee_t_path %>
+
+
+        <% end %>
+      </tbody>
+    </table>
+
+
+
+    
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
