added login page as index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,10 @@
 	font-size: 13pt !important;
 }
 
+.login-text {
+	font-size: 10pt !important;
+}
+
 .main-white {
 	background-color: #f8f8f8 !important;
 }
