--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,9 +68,9 @@
           </ul>
 
           <%else%>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><%= link_to "Log in", new_member_t_session_path, class: 'main-green-text nav-bar-text'%></li>
-          </ul>
+          <ul id="nav-mobile" class="left hide-on-med-and-down">
+              <li><a class="main-green-text crete-round"><font size="5">GABAY ERYA FORMATION PROGRAM INFORMATION SYSTEM (GEFPIS)</font></a></li>
+            </ul>
           <%end%>
       </div>
     </nav>
