updated create account path

--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -29,7 +29,7 @@
                         </div>
                         <div align="left" class="col s6">
                           <br>
-                          <%= link_to 'Create an account', new_member_t_path(@member_t), class: 'main-green-text login-text'%>
+                          <%= link_to 'Create an account', new_registration_path(:member_t), class: 'main-green-text login-text'%>
                         </div>
                         <div align="right" class="col s6">
                           <br>
