--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -25,7 +25,9 @@
                         </div>
                         <div class="col s12">
                           <br>
-                          <%= f.submit 'Sign in', :class => 'waves-effect waves-light btn col s12' %>
+                          <div class="form-actions">
+    <%= f.button :submit %>
+  </div>
                         </div>
                         <div align="left" class="col s6">
                           <br>
