--- a/app/views/member_ts/show.html.erb
+++ b/app/views/member_ts/show.html.erb
@@ -83,7 +83,9 @@
               </div>
             </div>      
           </div>
+          <%= link_to 'Back', member_ts_path, :class => 'waves-effect waves-light btn btn-main-green' %><br><br>
         </center>
+        <br>
 
 
 
@@ -98,4 +100,4 @@
 
 
 
-<%= link_to 'Back', member_ts_path %>
+
