--- a/app/views/module_ts/new.html.erb
+++ b/app/views/module_ts/new.html.erb
@@ -39,7 +39,7 @@
                           </div>
                         </form>  
                       </div>
-                      <div class="input-field col s12">
+                      <div class="dateinput col s12">
                           <%= f.input :subject, collection: ['Math', 'English'] %>
 
                       </div>
