--- a/app/views/worksheet_ts/index.html.erb
+++ b/app/views/worksheet_ts/index.html.erb
@@ -49,6 +49,7 @@
         </div>
         <div class="col s3">
               <td><center>
+                <%= link_to 'Show', worksheet_t_path(w), :class => 'waves-effect waves-light btn btn-main-green' %>
               <%= link_to 'Edit', edit_worksheet_t_path(w), :class => 'waves-effect waves-light btn btn-main-green' %>
               <%= link_to 'Delete', w, method: :delete, :class => 'waves-effect waves-light btn btn-main-green', data: { confirm: 'Are you sure?' } %></center></td>
             </div>
