--- a/app/views/worksheet_ts/show.html.erb
+++ b/app/views/worksheet_ts/show.html.erb
@@ -13,6 +13,8 @@
         <%= @worksheet_t.tutee_t.school %><br><br>
         <b>Score</b><br>
         <%= @worksheet_t.score %><br><br>
+         <b>Reached Quota?</b><br>
+        <%= @worksheet_t.reached_quota? %><br><br>
       </div>
     </div>
   </div>
