--- a/app/views/member_ts/registrations/new.html.erb
+++ b/app/views/member_ts/registrations/new.html.erb
@@ -60,35 +60,49 @@
     </div>
     </div>
   	<div class="row">
+      <div class="input-field col s6">
+          <%= f.input :email, required: true, autofocus: true, label: 'E-mail Address' %>
+    </div>
     <div class="input-field col s6">
       <%= f.input :contact_no, required: false, autofocus: true, label: 'Contact Number' %>
     </div>
     </div>
   	<div class="row">
-    <div class="input-field col s4">
+    <div class="dateinput col s4">
       <%= f.input :membership, required: false, autofocus: true, collection: ['Administration', 'Data Analysis', 'Modules', 'Tutors'] %>
     </div>
-    <div class="input-field col s4">
-        <%= f.input :committee, required: false, autofocus: true, collection: ['EdOp', 'EdForm', 'SA', 'Acad'] %>
+    <div class="dateinput col s4">
+        <%= f.input :committee, required: false, autofocus: true, collection: ['Education Operation', 'Education Formation', 'Social Analysis', 'Academic'] %>
     </div>
-    <div class="input-field col s4">
+    <div class="dateinput col s4">
         <%= f.input :scholarship, required: false, autofocus: true, collection: ['Financial Aid', 'Academic' ] %>
     
     </div>
     </div>
   </div>
-    <%= f.input :email, required: true, autofocus: true, label: 'E-mail Address' %>
+    <div class ="row">
+      <div class="input-field col s12">
     <%= f.input :password, required: true, label: 'Password' %>
-    <%= f.input :password_confirmation, required: true, label: 'Re-enter Password' %>
+  </div>
+</div>
+    <div class ="row">
 
+  <div class="input-field col s12">
+    <%= f.input :password_confirmation, required: true, label: 'Re-enter Password' %>
+  </div>
+
+</div>
 
   
-
+<br>
   <div class="form-actions">
+  <center>
+
     <%= f.submit :Save, class: 'btn btn-main-green pull-right' %>
+  <%= link_to 'Cancel', root_path, :class => 'waves-effect waves-light btn btn-main-green' %>
+  </center>
   </div>
     </div>
 </div>
 <% end %>
 
-<%= render "member_ts/shared/links" %>
