--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -26,7 +26,8 @@
                         <div class="col s12">
                           <br>
                           <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.submit :Login, label: 'Sign In', class: "waves-effect waves-light btn col s12"
+ %>
   </div>
                         </div>
                         <div align="left" class="col s6">
