--- a/app/views/worksheet_ts/_form.html.erb
+++ b/app/views/worksheet_ts/_form.html.erb
@@ -19,28 +19,31 @@
       <div class="card open-sans main-white">
         <div class="card-content">
           <div class="row">
-            <div class="input-field col s12">
-              <%= f.association :module_t, prompt: 'Module' %>
+            <div class="dateinput col s12">
+              <%= f.association :module_t, prompt: 'Module', collection: ModuleT.order('file_file_name ASC'), label: 'Module' %>
             </div>
           </div>
 
           <div class="row">
-            <div class="input-field col s12">
-              <%= f.association :tutee_t, prompt: 'Tutee' %>
+            <div class="dateinput col s12">
+              <%= f.association :tutee_t, prompt: 'Tutee', collection: TuteeT.order('last_name ASC'), label: 'Tutee' %>
             </div>              
           </div>
           <div class="row">
-            <div class="input-field col s4">
+            <div class="dateinput col s6">
               <%= f.input :score %>
             </div>
+
+             <div class="dateinput col s6">
+              <%= f.input :reached_quota, label: 'Reached Quota?', collection: ['Yes', 'No'] %>
+            </div>
           </div> 
-
-          <div class="row">
+       <div class="row">
             <div class="col s12">
-
-              <div class="form-actions col offset-s6">
-                <%= f.button :submit, "Submit" %>
-              </div>
+<center>
+                <%= f.button :submit, "Submit", :class => 'waves-effect waves-light btn btn-main-green' %>
+                <%= link_to 'Cancel', worksheet_ts_path, :class => 'waves-effect waves-light btn btn-main-green' %>
+              </center>
             </div>                 
           </div>  
 
