--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,6 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-
-
     <body class="main-white">
   <!--navbar-dropdown--> 
    <ul id="dropdown1" class="dropdown-content">
@@ -54,7 +52,7 @@
             <ul id="nav-mobile" class="left hide-on-med-and-down open-sans">
             <li><%= link_to "Modules", module_ts_path(), class: 'main-green-text nav-bar-text'%></li>
             <li><%= link_to "Evaluations", evaluation_ts_path(), class: 'main-green-text nav-bar-text'%></li>
-            <li><a class="dropdown-button main-green-text" href="#!" data-activates="dropdown2" data-beloworigin="true"><font size="5">&nbsp;Tutees</font><i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button main-green-text" href="#!" data-activates="dropdown2" data-beloworigin="true"><font size="5" class="nav-bar-text">&nbsp;Tutees</font><i class="material-icons right">arrow_drop_down</i></a></li>
           </ul>
           <ul id="nav-mobile" class="right hide-on-med-and-down open-sans">
             <li>
@@ -74,9 +72,12 @@
           <%end%>
       </div>
     </nav>
+    <div class="container">  
 
+    </div>
 
 <%= yield %>
 </body>
+
 
 </html>
