--- a/app/views/tpr_ts/_form.html.erb
+++ b/app/views/tpr_ts/_form.html.erb
@@ -18,12 +18,12 @@
     <div class="input-field col s6 offset-s3"> 
       <div class="row">
         <div class="input-field col s12">
-          <%= f.association :tutee_t, :label => 'Tutee' %>
+          <%= f.association :tutee_t, :label => 'Tutee', collection: TuteeT.order('last_name ASC') %>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s9">
-          <%= f.association :module_t, :label => 'Module' %>
+          <%= f.association :module_t, :label => 'Module', collection: ModuleT.order('file_file_name ASC')%>
         </div>
         <div class="input-field col s3">
         <%= f.input :week_no, :label => 'Week #' %>
